Fixes #324 : Parallax effect on homepage

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       </div>
       <div class="slide_viewer">
         <div class="slide_group">
-          <div class="slide" style="background-image: url(./images/carousel-img-2.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-1.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-3.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-4.jpg)"></div>
+          <div class="slide" style="background-image: url(./images/carousel-img-2.jpg); background-attachment: fixed;"></div>
+          <div class="slide" style="background-image: url(./images/carousel-img-1.jpg); background-attachment: fixed"></div>
+          <div class="slide" style="background-image: url(./images/carousel-img-3.jpg); background-attachment: fixed"></div>
+          <div class="slide" style="background-image: url(./images/carousel-img-4.jpg); background-attachment: fixed"></div>
           <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
         </div>
       </div>
