--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="portfolio-box">
       <img src="images/insects-on-a-field.jpg" alt="PROJECT-IMG" />
       <div class="portfolio-layer">
-        <h4>Crop care & maintainance</h4>
+        <h4>Crop care & maintenance</h4>
         <iframe width="407" height="300" src="https://www.youtube.com/embed/juzHupSvWcw?rel=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
