contact page updated

--- a/index.html
+++ b/index.html
@@ -359,17 +359,24 @@
       <h2 class="heading">Contact <span>Us!</span></h2>
         <form action="#" id="contact-form">
         <div class="input-box">
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email Address" required>
+          <i class='icon1 bx bxs-user' style="font-size:33px;"></i>
+          <input type="text" placeholder="Full Name" style="padding-left: 7%;" required >
+          <i class='icon4 bx bxl-gmail'  style="font-size: 33px;"></i>
+          <input type="email" placeholder="Email Address" style="padding-left: 7%;"  required>
         </div>
 
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" required id="mobileNumber">
-          <input type="text" placeholder="Email Subject" required>
+          <i class='icon2 bx bxs-phone-call' style="font-size: 33px;"></i>
+          <input type="number" placeholder="Mobile Number" style="padding-left: 7%;" required id="mobileNumber" >
+          <i class='icon5 bx bxs-envelope' style="font-size: 33px;"></i>
+          <input type="text" placeholder="Email Subject" style="padding-left: 7%;" required>
         </div>
-
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <div class="text-box" style="position:relative;">
+        <i class='icon3 bx bxs-message'  style="font-size: 33px;"></i>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"   style="padding-left: 7%;" required></textarea>
+        </div>
         <button id="review-btn">Give feedback</button>
+        
         <input type="submit" value="Send Message" class="btn" id="contact-btn"> 
 
         </form>
