--- a/index.html
+++ b/index.html
@@ -73,12 +73,19 @@
   <section class="farm" id="Farm Management">
     <h2 class="heading">Agro<span>Blogs</span></h2>
 
+    <!--search bar-->
+    <div class="search">
+    <input id="input" class="search-bar" placeholder="Search Blogs" oninput="search()"/>
+    <img id="search-icon" src="./images/search icon.jpg"/>
+    </div>
+
     <div class="services-container">
 
       <div class="services-box">
         <a href="https://tractorkarvan.com/blog/how-to-sow-seeds">
             <i class='bx bx-leaf'></i>
-            <h3>Sowing Techniques</h3></a>
+            <h3 class="title">Sowing Techniques</h3></a>
+           
             <p>Uncover the significance of precise seed placement, optimal spacing, and appropriate depth in enhancing crop yields. From promoting germination to managing weeds and pests, explore the critical aspects of sowing that shape successful cultivation. Glean valuable insights into modern sowing practices and cultivate a deeper understanding of this fundamental process in agriculture. </p>
         
     </div>
@@ -88,9 +95,8 @@
       <div class="services-box">
         <a href="https://www.groundsguys.com/blog/2015/july/irrigation-different-techniques-and-benefits/">
         <i class='bx bx-water'></i>
-        <h3>Irrigation Techniques</h3></a>
+        <h3 class="title">Irrigation Techniques</h3></a>
         <p>Learn about the crucial role of precise watering methods, optimal distribution, and strategic timing in nurturing thriving crops. From supporting germination to efficient water management, uncover essential aspects that contribute to successful cultivation. Gain valuable insights into modern irrigation practices, offering a deeper understanding of this fundamental process in agriculture. </p>
-
       </div>
 
 
@@ -98,7 +104,7 @@
       <div class="services-box">
         <a href="https://www.worldbank.org/en/topic/climate-smart-agriculture">
         <i class='bx bx-sun'></i>
-        <h3>Climate Smart Agriculture</h3></a>
+        <h3 class="title">Climate Smart Agriculture</h3></a>
         <br>
         <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
       </div>
@@ -203,7 +209,7 @@
         </div>
 
         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <input type="submit" value="Send Message" class="btn"> 
+        <input type="submit" value="Send Message" class="btn" id="submit-btn"> 
 
         </form>
 
