--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AgriLearnNetwork</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
   <link rel="stylesheet" href="style.css" />
   
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -50,33 +48,14 @@
         <h3 class="home--welcome">Your Agricultural Knowledge Hub to <span class="multiple-text"></span></h3>
   
       </div>
-      <div class="carousel slide" data-bs-ride="carousel"  id="banners">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="7000">
-            <img src="./images/carousel-img-2.jpg" class="d-block w-100" alt="image1-agriculture" />
-          </div>
-          <div class="carousel-item" data-bs-interval="7000">
-            <img src="./images/carousel-img-1.jpg" class="d-block w-100" alt="image12-agriculture" />
-          </div>
-          <div class="carousel-item" data-bs-interval="7000">
-            <img src="./images/carousel-img-3.jpg" class="d-block w-100" alt="image3-agriculture" />
-          </div>
-          <div class="carousel-item" data-bs-interval="7000">
-            <img src="./images/carousel-img-4.jpg" class="d-block w-100" alt="image4-agriculture" />
-          </div>
-        </div>
-      </div>  
-      <!-- <div class="slide_viewer">
+      <div class="slide_viewer">
         <div class="slide_group">
           <div class="slide" style="background-image: url(./images/carousel-img-2.jpg)"></div>
           <div class="slide" style="background-image: url(./images/carousel-img-1.jpg)"></div>
           <div class="slide" style="background-image: url(./images/carousel-img-3.jpg)"></div>
-          <div class="slide" style="background-image: url(./images/carousel-img-4.jpg)"></div> -->
+          <div class="slide" style="background-image: url(./images/carousel-img-4.jpg)"></div>
           <!-- <div class="slide" style="background-image: url(./images/carousel-img-5.jpg)"></div> -->
-        <!-- </div>
-      </div> -->
-      <div>
-
+        </div>
       </div>
     </div>
     
@@ -469,29 +448,29 @@
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 
 <script>
-  //document.addEventListener("DOMContentLoaded", function() {
-  //const slideGroup = document.querySelector('.slide_group');
-  //let currentSlide = 0;
-  //const images = ['./images/carousel-img-2.jpg', './images/carousel-img-1.jpg', './images/carousel-img-3.jpg', './images/carousel-img-4.jpg'];
+  document.addEventListener("DOMContentLoaded", function() {
+  const slideGroup = document.querySelector('.slide_group');
+  let currentSlide = 0;
+  const images = ['./images/carousel-img-2.jpg', './images/carousel-img-1.jpg', './images/carousel-img-3.jpg', './images/carousel-img-4.jpg'];
 
-  //function showSlide(n) {
-  //  slideGroup.style.left = `${-n * 100}%`; // Adjust left property based on current slide
-  //  currentSlide = n;
-  //}
+  function showSlide(n) {
+    slideGroup.style.left = `${-n * 100}%`; // Adjust left property based on current slide
+    currentSlide = n;
+  }
 
-  //function nextSlide() {
-  //  currentSlide = (currentSlide + 1) % images.length; // Move to the next slide
-  //  showSlide(currentSlide);
-  //}
+  function nextSlide() {
+    currentSlide = (currentSlide + 1) % images.length; // Move to the next slide
+    showSlide(currentSlide);
+  }
 
-  //setInterval(nextSlide, 2000); // Automatically change slide every 2 seconds
+  setInterval(nextSlide, 2000); // Automatically change slide every 2 seconds
 
   // Preload images for smoother transition
-  //images.forEach(src => {
-  //  const img = new Image();
-  //  img.src = src;
-  //});
-//});
+  images.forEach(src => {
+    const img = new Image();
+    img.src = src;
+  });
+});
 
 // mobile no validation @dhruv8433
 const mobileNumberInput = document.getElementById('mobileNumber');
@@ -519,8 +498,6 @@ const mobileNumberInput = document.getElementById('mobileNumber');
       v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
   })(document, 'script');
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
