--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
       <p>Uncover the significance of precise seed placement, optimal spacing, and appropriate depth in enhancing crop yields. From promoting germination to managing weeds and pests, explore the critical aspects of sowing that shape successful cultivation. Glean valuable insights into modern sowing practices and cultivate a deeper understanding of this fundamental process in agriculture. </p>
     </p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>  
@@ -116,8 +118,10 @@
       <h2>Irrigation Techniques</h2>
       <p>Learn about the crucial role of precise watering methods, optimal distribution, and strategic timing in nurturing thriving crops. From supporting germination to efficient water management, uncover essential aspects that contribute to successful cultivation. Gain valuable insights into modern irrigation practices, offering a deeper understanding of this fundamental process in agriculture. </p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>  
@@ -128,8 +132,10 @@
       <h2>Climate Smart Agriculture</h2>
       <p>Explore the dynamic interplay between climate change and agriculture, navigating the challenges posed by shifting weather patterns and extreme events.Learn about innovative strategies empowering farmers to not only withstand the impacts but also seize opportunities for sustainable and resilient food production.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -141,8 +147,10 @@
       <h2>Sustainable Agriculture Research & Education (SARE)</h2>
       <p>Explore different methods and techniques for sustainable agriculture, such as organic farming, permaculture, or agroforestry. Explore the latest innovations and techniques in sustainable agriculture, including organic farming methods, permaculture, and regenerative agriculture.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -154,8 +162,10 @@
       <h2>Crop Rotation</h2>
       <p>Discusses the importance of crop rotation in maintaining soil fertility, preventing pests and diseases, and improving crop yield. Delve into the importance of crop rotation in maintaining soil fertility and preventing pest and disease outbreaks. Discover various crop rotation methods, their benefits, and how they contribute to improving yield and reducing the reliance on chemical inputs in modern agricultural systems.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -168,8 +178,10 @@
       <h2>Seasonal Planting Guide</h2>
       <p>Provides tips and advice on what crops to plant during different seasons, along with information on optimal planting times and growing conditions.A seasonal planting guide serves as a roadmap for gardeners, offering invaluable insights into optimal planting times and techniques tailored to specific seasons.By following such a guide, gardeners can optimize their efforts and cultivate thriving gardens year-round.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -182,8 +194,10 @@
       <h2>Soil Health and Management</h2>
       <p>Covers topics related to soil fertility, soil testing, nutrient management, and techniques for improving soil health, such as composting and cover cropping.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -196,8 +210,10 @@
       <h2>Integrated Pest Management</h2>
       <p>Explains the principles of IPM and how farmers can use a combination of cultural, biological, and chemical methods to control pests while minimizing environmental impact.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -210,8 +226,10 @@
       <h2>Farming Technology</h2>
       <p>Explore the latest advancements in agricultural technology, such as precision agriculture, drones, smart irrigation systems, and automated farm machinery.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -224,8 +242,10 @@
       <h2>Farming Economics</h2>
       <p>Discusses economic aspects of farming, including market trends, pricing strategies, financial management, and government policies affecting the agriculture sector.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
@@ -239,9 +259,12 @@
       <h2>Livestock Management</h2>
       <p>Provides guidance on raising and managing livestock, including topics such as animal health, breeding, nutrition, housing, and pasture management</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
-        </div>
+        <ul>
+      <li class="date"><p class="tim">April 19, 2022</p> </li>
+       <li class="time"><p class="tim">11 minutes ago</p></li>
+      </ul>
+      </div>
+     
     </div>    
   </div>
 
@@ -254,18 +277,13 @@
       <h2>Agri-Tourism</h2>
       <p>Explore opportunities for farmers to diversify their income through agri-tourism activities such as farm tours, farm stays, pick-your-own operations, or on-farm events.</p>
       <div class="day">
-      <p class="tim">April 19, 2022</p>
-       <p class="tim">11mins ago</p>
+        <ul>
+          <li class="date"><p class="tim">April 19, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
         </div>
     </div>    
   </div>
-
-
-
-
-
-
-
 
 
 
