Redesign Contact Us and Feedback forms to match the website theme, remove annoying pop-ups with a non-blocking warning and message solution, improve overall user experience.

--- a/index.html
+++ b/index.html
@@ -274,12 +274,14 @@
 </section>
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
+     <!-- @visioncodin021 make perfectly match with theam of this website -->
+        <div id="alert" class="alert">This is Alert</div>
         <form action="#" id="contact-form">
         <div class="input-box">
           <input type="text" placeholder="Full Name" required>
           <input type="email" placeholder="Email Address" required>
         </div>
-
+ 
         <div class="input-box">
           <input type="number" placeholder="Mobile Number" required id="mobileNumber">
           <input type="text" placeholder="Email Subject" required>
@@ -294,6 +296,7 @@
     </section>
 
 <!-- Modal  -->
+<!-- @visioncodin021 make perfectly match with theam of this website -->
 <div id="modal" class="modal">
   <div class="modal-content">
       <span class="close">&times;</span>
