--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
-      <a href="#crop-yield-calculator"><i class="fa-solid fa-calculator"></i> Crop Yield Calculator</a>
+      <a href="CropYieldCalculator.html"><i class="fa-solid fa-calculator"></i> Crop Yield Calculator</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
 
 
@@ -271,63 +271,6 @@
         </div>
       </div>
 
-      <section class="calculator"  id="crop-yield-calculator">
-        <h2 class="heading">Crop&nbsp;Yield&nbsp;<span>Calculator</span></h2>
-        <div class="calculator-container">
-            <div class="container">
-                <form id="yield-form">
-                    <div class="form-group">
-                        <label for="crop">Crop Type:</label>
-                        <input type="text" id="crop" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="weather">Weather Conditions:</label>
-                        <select id="weather">
-                            <option value="1">Optimal</option>
-                            <option value="0.8">Favorable</option>
-                            <option value="0.6">Average</option>
-                            <option value="0.4">Unfavorable</option>
-                            <option value="0.2">Severe</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="soil">Soil Type:</label>
-                        <select id="soil">
-                            <option value="1">Clay</option>
-                            <option value="0.9">Sandy</option>
-                            <option value="0.8">Loamy</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="crop-rotation">Crop Rotation:</label>
-                        <select id="crop-rotation">
-                            <option value="1">Previous crop: Corn</option>
-                            <option value="0.9">Previous crop: Soybeans</option>
-                            <option value="0.8">Previous crop: Wheat</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="management">Management Practices:</label>
-                        <select id="management">
-                            <option value="1">Irrigation and fertilization</option>
-                            <option value="0.9">Irrigation only</option>
-                            <option value="0.8">Fertilization only</option>
-                        </select>
-                    </div>            
-                    <div class="form-group">
-                        <label for="area">Area (in acres):</label>
-                        <input type="number" id="area" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="yield">Expected Yield (per acre):</label>
-                        <input type="number" id="yield" required>
-                    </div>
-                    <button type="button" onclick="calculateYield()">Calculate</button>
-                </form>
-                <div id="result" class="heading"></div>
-            </div>
-        </div>
-    </section>
     
 
     </section>
@@ -403,7 +346,7 @@
       <li><a href="#about"><p>About Us</p></a></li>
       <li><a href="#Farm Management"><p>Blogs</p></a></li>
       <li><a href="#Resource Library"><p>Resource Library</p></a></li>
-      <li><a href="#crop-yield-calculator"><p>Crop Yield Calculator </p></a></li>
+      <li><a href="CropYieldCalculator.html"><p>Crop Yield Calculator </p></a></li>
       <li><a href="#contact"><p>Contact Us</p></a></li>
     </ul>
   </div>
