--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
       <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
       <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+      <a href="CropYieldCalculator.html"><i class="fa-solid fa-calculator"></i> Crop Yield Calculator</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
 
     </nav>
@@ -450,6 +451,7 @@
       <li><a href="#about"><p>About Us</p></a></li>
       <li><a href="#Farm Management"><p>Blogs</p></a></li>
       <li><a href="#Resource Library"><p>Resource Library</p></a></li>
+      <li><a href="CropYieldCalculator.html"><p>Crop Yield Calculator </p></a></li>
       <li><a href="#contact"><p>Contact Us</p></a></li>
     </ul>
   </div>
