Add crop rotation image

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
 
   <div class="fcard" onclick="window.location.href='https://rodaleinstitute.org/why-organic/organic-farming-practices/crop-rotations/';">
-    <img class="agrblg" src="./images/croprota.jpg">
+    <img class="agrblg" src="./images/croprotation.jpg">
     <div class="article">
       <a href="">Blog</a>
       <h2>Crop Rotation</h2>
@@ -376,28 +376,26 @@
   </div>
 </section>
 
+<section class="contact" id="contact">
+  <div class="container">
+    <h2 class="heading">Contact <span>Us!</span></h2>
+    <form action="#" id="contact-form" class="contact-form">
+      <div class="input-box">
+        <input type="text" placeholder="Full Name" required>
+        <input type="email" placeholder="Email Address" required>
+      </div>
 
-    <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Us!</span></h2>
-        <form action="#" id="contact-form">
-        <div class="input-box">
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email Address" required>
-        </div>
+      <div class="input-box">
+        <input type="tel" placeholder="Mobile Number" required id="mobileNumber">
+        <input type="text" placeholder="Email Subject" required>
+      </div>
 
-        <div class="input-box">
-          <input type="number" placeholder="Mobile Number" required id="mobileNumber">
-          <input type="text" placeholder="Email Subject" required>
-        </div>
+      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn" id="contact-btn">Send Message</button>
+    </form>
+  </div>
+</section>
 
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <button id="review-btn">Give feedback</button>
-        <input type="submit" class="btn" id="contact-btn">
-
-
-        </form>
-     
-    </section>
 
 <!-- Modal  -->
 <div id="modal" class="modal">
