added smart farming blog

--- a/index.html
+++ b/index.html
@@ -287,8 +287,19 @@
     </div>    
   </div>
 
-
-
+  <div class="fcard" onclick="window.location.href='/blogs/smartfarming/smartfarming.html'">
+    <img class="agrblg" src="blogs\smartfarming\img2.png">
+    <div class="article">
+      <a href="/blogs/smartfarming/smartfarming.html">Blog</a>
+      <h2>Smart Farming</h2>
+      <p>Feeling the pressure to grow more food with less?  This blog dives into smart farming technologies and how they're revolutionizing agriculture for a more productive and sustainable future.</p>
+        <ul>
+          <li class="date"><p class="tim">May 23, 2022</p> </li>
+           <li class="time"><p class="tim">11 minutes ago</p></li>
+          </ul>
+        </div>
+    </div>    
+  </div>
 
 </section>
 
