--- a/index.html
+++ b/index.html
@@ -26,21 +26,25 @@
 <body>
   
   <header class="header">
-    <img src="images/favicon.png" alt="logo" style="height:50px; width:50px; margin-right:10px;" >
-    <a href="#" class="logo" style="margin-inline-end:auto;"><h3>AgriLearnNetwork</h3>  </a>
-
-
+    <img src="images/favicon.png" alt="logo" class="logo">
+    <a href="#" class="logo"><h3>AgriLearnNetwork</h3></a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navbar">
-      
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
-      <a href="#about"><i class="fa-solid fa-circle-info"></i>  About</a>
-      <a href="#Farm Management"> <i class="fa-solid fa-blog"></i>  Blogs</a>
-      <a href="#Resource Library"><i class="fa-solid fa-book"></i>  Resource Library</a>
+      <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
+      <a href="#Farm Management"><i class="fa-solid fa-blog"></i> Blogs</a>
+      <a href="#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
       <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
-
+      <div class="dark-mode-toggle">
+        <input type="checkbox" id="dark-mode-toggle" class="dark-mode-checkbox">
+        <label for="dark-mode-toggle" class="dark-mode-label">
+          <span class="dark-mode-ball"></span>
+        </label>
+      </div>
     </nav>
   </header>
+  
+  
 
   <section class="home" id="home">
     <div class="slider">
