--- a/index.html
+++ b/index.html
@@ -402,7 +402,6 @@
 <!-- Modal  -->
 <div id="modal" class="modal">
   <div class="modal-content">
-    <div class="left-content">
       <span class="close">&times;</span>
       <h2>Feedback Form</h2>
       <form id="feedback-form">
@@ -421,11 +420,11 @@
         </div>
             
         
-        <button type="submit">Submit</button>
+        <button type="submit">Feedback</button>
     </form>
 </div>
-<div class="right-content"></div>
-</div>
+
+
 </div>
 
 <footer class="footer">
