Enhancement of Contact Us Page UI according to your inputs

--- a/index.html
+++ b/index.html
@@ -376,28 +376,45 @@
   </div>
 </section>
 
+<!-- Contact -->
+<section>
+  <div class="contact">
+      <div class="contactInfo" > 
+        <img src="images/hand.jpg">
+      </div>
+          <div class="contactForm">
+              <h2>Contact Us!</h2>
+              <div class="formBox">
+              <div class="inputBox w50">
+                  <input type="text" name="" required>
+                  <span>Full Name</span>
+              </div>
+              <div class="inputBox w50">
+                  <input type="text" required>
+                  <span>Email Address</span>
+              </div>
+              <div class="inputBox w50">
+                  <input type="email" required>
+                  <span>Mobile Number</span>
+              </div>
+              <div class="inputBox w50">
+                  <input type="text" required>
+                  <span>Email Subject</span>
+              </div>
+              <div class="inputBox w100">
+                  <textarea required></textarea>
+                  <span>Write your message here...</span>
+              </div>
+              <div class="inputBox w100">
+                  <input type="submit" value="Submit">
+              </div>
+              <div class="feedback" >
+                <a href="">Feedback</a>
+              </div>
+          </div>
+      </div>
+</section>
 
-    <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Us!</span></h2>
-        <form action="#" id="contact-form">
-        <div class="input-box">
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email Address" required>
-        </div>
-
-        <div class="input-box">
-          <input type="number" placeholder="Mobile Number" required id="mobileNumber">
-          <input type="text" placeholder="Email Subject" required>
-        </div>
-
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <button id="review-btn">Give feedback</button>
-        <input type="submit" class="btn" id="contact-btn">
-
-
-        </form>
-     
-    </section>
 
 <!-- Modal  -->
 <div id="modal" class="modal">
