--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           ><i class="fa-solid fa-house"></i> Home</a
         >
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="/blogpage/index.html" target="_self">
+        <a href="\blogpage\index.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
         <a href="#Resource Library"
