--- a/index.html
+++ b/index.html
@@ -391,9 +391,11 @@
         </div>
 
         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <button id="review-btn">Give feedback</button>
-        <input type="submit" class="btn" id="contact-btn">
-
+        <input type="submit" class="btn" id="contact-btn"><br>
+        <div class="button-container">
+          <button id="review-btn">Give feedback</button>
+        </div>
+    
 
         </form>
      
