Improved UI for the Contact Us Page Compared to the Previous Version

--- a/index.html
+++ b/index.html
@@ -407,9 +407,7 @@
               </div>
               <div class="inputBox w100">
                   <input type="submit" value="Submit">
-              </div>
-              <div class="feedback" >
-                <a href="">Feedback</a>
+                  <input type="button" value="Feedback">
               </div>
           </div>
       </div>
