added back arrow to blog page

--- a/blogpage.html
+++ b/blogpage.html
@@ -12,7 +12,7 @@
 
       <div class="heading">
         <div class="navoptions">
-          <a href="index.html">Back to Home</a>
+          <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div> 
         <div class="navtitle">
           <h2>Agro<span>Blogs</span></h2>
