Slight changes in the feedback button

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           placeholder="Your Message"
           required
         ></textarea>
-        <button id="review-btn">Give feedback</button>
+        <h2><button id="review-btn">Give your Feedback</button></h2>
         <input type="submit" class="btn" id="contact-btn" />
       </form>
     </section>
