--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <a href="#about"><p>About Us</p></a>
           </li>
           <li>
-            <a href="#Farm Management"><p>Blogs</p></a>
+            <a href="blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
