updare index add see more button for resource library

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <a href="https://youtu.be/L1qZ_-cBdgM?si=-hZGedS2J2_M2yl_"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
-      <div class="portfolio-box">
+      <!-- <div class="portfolio-box">
         <img src="images/iStock-1179642020-1024x683.jpg" alt="PROJECT-IMG" />
         <div class="portfolio-layer">
           <h4>Seasonal plant guide</h4>
@@ -225,8 +225,8 @@
 
           <a href="https://youtu.be/exfgg_2WCts?si=Z8KnPrrAmd-eYmil"><i class='bx bx-link-external'></i></a>
         </div>
-      </div>
-      <div class="portfolio-box">
+      </div> -->
+      <!-- <div class="portfolio-box">
         <img src="images/insects-on-a-field.jpg" alt="PROJECT-IMG" />
         <div class="portfolio-layer">
           <h4>Crop care & maintainance</h4>
@@ -267,9 +267,16 @@
 
           <a href="https://youtu.be/g0wkT3mf80U?si=I9VfWYFumZW03lnB"><i class='bx bx-link-external'></i></a>
         </div>
-      </div>
+      </div> -->
 
     </section>
+
+    <div class="see-more">
+      <a href="/resource-library.html">
+        <button>see more</button>
+      </a>
+    </div>
+
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
         <form action="#" id="contact-form">
