--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </div>
         </div>
 
-        <div class="portfolio-box">
+        <!-- <div class="portfolio-box">
           <h4 class="portfolio-heading">Seasonal plant guide</h4>
           <img src="images/iStock-1179642020-1024x683.jpg" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
@@ -278,7 +278,7 @@
             ></iframe>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <div class="see-more">
