update resource page

--- a/resource-library.html
+++ b/resource-library.html
@@ -51,7 +51,7 @@
         </div>
     </header>
 
-    <section class="benefits-section">
+    <section class="benefits-section" style="padding-bottom: 40px;">
         <div class="content">
             <h1 style="margin-top: 20px;">Resource Library</h1>
             <h2>Changing the World, One Small Farm At A Time</h2>
