Improve feedback button

--- a/index.html
+++ b/index.html
@@ -299,17 +299,12 @@
           <input type="text" placeholder="Email Subject" required />
         </div>
 
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-          required
-        ></textarea>
-        <button id="review-btn">Give feedback</button>
-        <input type="submit" class="btn" id="contact-btn" />
-      </form>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <input type="submit" class="btn" id="contact-btn"><br>
+        </form>
+        <div class="button-container">
+          <button id="review-btn">Give feedback</button>
+        </div>
     </section>
 
     <!-- Modal -->
