add effect and fix footer logo link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
   </head>
+  <link rel="stylesheet" href="water_shadow.css">
+  <script src="water_shadow.js"></script>
 
   <body>
     <header class="header">
@@ -349,7 +351,9 @@
     <footer class="footer">
       <div class="footer-grid">
         <div class="footer-title">
-          <h2>AgriLearnNetwork</h2>
+          <a href="#" class="logo" style="margin-inline-end: auto"
+        ><h2>AgriLearnNetwork</h2>
+      </a>
         </div>
         <div class="footer-icons">
           <p><b>Follow us on our socials:</b></p>
@@ -409,7 +413,6 @@
     <div  id="backtoTop">
       <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
