--- a/index.html
+++ b/index.html
@@ -282,31 +282,44 @@
     </section>
 
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Us!</span></h2>
-      <form action="#" id="contact-form">
-        <div class="input-box">
-          <input type="text" placeholder="Full Name" required />
-          <input type="email" placeholder="Email Address" required />
+      <div class="contact-container">
+        <div class="contact-info">
+          <h2 class="heading">Contact <span>Us!</span></h2>
+          <p class="heading">We are here to help you</p>
+          <div class="about-content">
+            <div class="item">
+              <div class="row">
+                <div class="card" >
+                  <div class="line">
+                    <h4>Call us</h4>
+                  </div>
+                  <p>+91 9999999999</p>
+                </div>
+                <div class="card">
+                  <div class="line">
+                    <h4>Mail us</h4>
+                  </div>
+                  <p>AgriLearnNetwork@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="input-box">
-          <input
-            type="number"
-            placeholder="Mobile Number"
-            required
-            id="mobileNumber"
-          />
-          <input type="text" placeholder="Email Subject" required />
-        </div>
-
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <input type="submit" class="btn" id="contact-btn"><br>
-        </form>
-        <div class="button-container">
+        <form action="#" id="contact-form">
+          <div class="input-box">
+            <input type="text" placeholder="Full Name" required>
+            <input type="email" placeholder="Email Address" required>
+          </div>
+          <div class="input-box">
+            <input type="number" placeholder="Mobile Number" required id="mobileNumber">
+            <input type="text" placeholder="Email Subject" required>
+          </div>
+          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
           <button id="review-btn">Give feedback</button>
-        </div>
+          <input type="submit" class="btn" id="contact-btn">
+        </form>
+      </div>
     </section>
-
     <!-- Modal -->
 <div id="modal" class="modal">
   <div class="modal-content">
