change mouse effect

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
   </head>
-  <link rel="stylesheet" href="water_shadow.css">
-  <script src="water_shadow.js"></script>
+  <link rel="stylesheet" href="mouseEffect.css">
+  <script src="mouseEffect.js"></script>
 
   <body>
     <header class="header">
