Added product page to the website

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
           </div>
         </div>
       </div>
+
+     
+
     </section>
 
     <section class="about" id="about">
@@ -280,6 +283,9 @@
         </div>
       </div>
     </section>
+    
+    <div class="buy-btn">
+    <button onclick="location.href='buy-product.html'" class="btn" id="contact-btn">Buy Products</button></div>
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
